[gd_scene load_steps=8 format=3 uid="uid://dys6l7nqryxa6"]

[ext_resource type="Texture2D" uid="uid://jwbsximbjgsh" path="res://Assets/Sprites/bgProgressBar.png" id="1_ohhea"]
[ext_resource type="Script" path="res://Scripts/upgrade.gd" id="1_vufc3"]
[ext_resource type="Texture2D" uid="uid://uyuwagilcavy" path="res://Assets/Sprites/warning_icon.png" id="2_prnyf"]
[ext_resource type="FontFile" uid="uid://ftrtcyvfvchj" path="res://Assets/Fonts/Born2bSportyFS.otf" id="3_8nkir"]
[ext_resource type="Texture2D" uid="uid://ba5jyhwc4b4ro" path="res://Assets/Sprites/bg_ballonMessage.png" id="5_naw13"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dqgy4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jjvd3"]

[node name="Upgrade" type="Control"]
custom_minimum_size = Vector2(370, 74)
layout_mode = 3
anchor_right = 0.321
anchor_bottom = 0.114
offset_right = 0.207977
offset_bottom = 0.127998
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_vufc3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_dqgy4")

[node name="texture_bg_upgrade" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ohhea")
expand_mode = 1

[node name="texture_icon" type="TextureRect" parent="Panel/texture_bg_upgrade"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.5
anchor_right = 0.168
anchor_bottom = 1.0
offset_left = -19.79
offset_top = -22.0
offset_right = 22.84
offset_bottom = -13.0
texture = ExtResource("2_prnyf")
expand_mode = 1

[node name="label_description" type="Label" parent="Panel/texture_bg_upgrade"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.236
anchor_right = 0.979
anchor_bottom = 0.985
offset_left = -1.32001
offset_top = 24.0
offset_right = -0.665009
offset_bottom = 0.0199966
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.00784314, 0, 0.00392157, 1)
theme_override_fonts/font = ExtResource("3_8nkir")
theme_override_font_sizes/font_size = 16
text = "This a text, to describe upgrade. Text text text text text text. Text text text text text text."
autowrap_mode = 2

[node name="label_cost" type="Label" parent="Panel/texture_bg_upgrade"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -22.0
offset_right = 42.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.00784314, 0, 0.00392157, 1)
theme_override_fonts/font = ExtResource("3_8nkir")
theme_override_font_sizes/font_size = 27
text = "000"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="label_name" type="Label" parent="Panel/texture_bg_upgrade"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.236
anchor_right = 0.973
anchor_bottom = 0.5
offset_left = -2.32001
offset_top = -6.0
offset_right = -2.17502
offset_bottom = -7.0
theme_override_colors/font_color = Color(0.00784314, 0, 0.00392157, 1)
theme_override_fonts/font = ExtResource("3_8nkir")
theme_override_font_sizes/font_size = 24
text = "UPGRADE NAME"
vertical_alignment = 1
autowrap_mode = 2

[node name="button_upgrade" type="Button" parent="Panel/texture_bg_upgrade"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.166
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.944
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Tooltip" type="Panel" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 218.0
offset_top = -87.0
offset_right = 518.0
offset_bottom = 10.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_jjvd3")

[node name="TextureRect" type="TextureRect" parent="Panel/Tooltip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_naw13")
expand_mode = 1

[node name="Label" type="Label" parent="Panel/Tooltip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 8.0
offset_right = -9.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8nkir")
theme_override_font_sizes/font_size = 21
text = "aaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaa aaaaaaaaaaaaaa aaa"
autowrap_mode = 3
text_overrun_behavior = 2

[node name="warning" type="ColorRect" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 41.0
offset_top = 44.0
offset_right = 341.0
offset_bottom = 74.0
color = Color(1, 0.37, 0.37, 1)

[node name="Label" type="Label" parent="Panel/warning"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8nkir")
text = "You don't have enough points to buy this!"
horizontal_alignment = 1
vertical_alignment = 1
